# bridgr-api

./: .air.toml  .air.worker.toml  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  go.sum
cmd/api/: main.go
config/: docker.development.env
db/: migration-structure.sql  sqlc-structure.sql  sqlc.yaml
job-application/: EFFICIENCY.md  HOW-TO-RUN.md  SKILL.md
radar/: .env  .env.example  README.md  pyproject.toml
radar/config/: searches.yaml  supported_boards.yaml
radar/scripts/: add_deps.sh  debug_find_jobs.py  ensure_grpc_server.sh  init.sh  test_find_jobs.py  test_indeed_spider.py  test_linkedin_spider.py
radar/src/radar_service/: __init__.py  config.py  grpc_server.py  llm.py
radar/src/radar_service/core/: __init__.py  agent_orchestrator.py  models.py  proxy_pool.py  scheduler.py  spider_registry.py
radar/src/radar_service/discovery/: __init__.py  boards.py  crawl_registry.py  models.py  servicer.py
radar/src/radar_service/discovery/engines/: __init__.py  common.py  generic_url.py  jobspy.py  smartextract.py  workday.py
radar/src/radar_service/extractors/: __init__.py  base.py  indeed_extractor.py
radar/src/radar_service/job_search/: __init__.py  analyze.py  apply.py  extraction.py  find_jobs.py  servicer.py
radar/src/radar_service/job_search/sources/: __init__.py  indeed.py
radar/src/radar_service/pdf/: __init__.py  servicer.py
radar/src/radar_service/spiders/: __init__.py  base.py  bloomberg.py  generic_url_spider.py  indeed.py  jobspy_spider.py  linkedin.py  smartextract_spider.py  workday_spider.py
(+373 files in other folders)
