[project]
name = "radar-service"
version = "0.1.0"
description = "Radar service: gRPC data layer for web scraping, browsing, and crawling (Crawl4ai, browser-use)"
requires-python = ">=3.11"
dependencies = [
    "hs-protos",
    "python-jobspy",
    "pandas",
    "pyyaml",
    "httpx",
    "urllib3>=2.0,<3",
    "browser-use>=0.11.0",
    "crawl4ai>=0.4.0",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
    "grpcio-health-checking>=1.78.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.0.0",
    "pypdf>=5.0.0",
    "pymupdf>=1.25.0",
    "playwright>=1.49.0",
    "fastapi>=0.129.2",
    "uvicorn[standard]>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/radar_service"]

[dependency-groups]
dev = ["ruff>=0.11.0", "pytest>=8.0.0", "pytest-asyncio>=0.24.0", "watchfiles>=0.24.0"]

[tool.uv.sources]
hs-protos = { git = "https://github.com/hassleskip/hs-protos.git", tag = "v0.7.0" }
